Corrected CSS so opponent shots will stack on ship root cell and leaderboard is not covered by player shots.

--- a/src/style.css
+++ b/src/style.css
@@ -143,7 +143,12 @@ body {
 .cellImage {
   width: 40px;
   height: 40px;
-  z-index: 10;
+  position: absolute;
+  z-index: 1;
+}
+
+.ship {
+  position: absolute;
 }
 
 #carrierImageH {
